--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /* your code */
+table{
+	border-collapse : collapse;
+	border : 0px solid ;
+	
+	width : 100%;
+}
+
+.header{
+	background-color : blue;
+	color : white;
+	text-align : left;
+}
